--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Aqui el blog post</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi tenetur cupiditate quis dolore. Facilis, temporibus deserunt vero atque dolores sit aspernatur rerum praesentium inventore officiis animi eveniet at accusamus repellat!</p>
+
+    <div class="container">
+        <div id="post">
+            <h1>Aqui el blog post</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi tenetur cupiditate quis dolore. Facilis, temporibus deserunt vero atque dolores sit aspernatur rerum praesentium inventore officiis animi eveniet at accusamus repellat!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi tenetur cupiditate quis dolore. Facilis, temporibus deserunt vero atque dolores sit aspernatur rerum praesentium inventore officiis animi eveniet at accusamus repellat!</p>
+        </div>
+    </div> 
+  
 </body>
 </html>
