--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,10 @@
 <body>
 
     <div class="container">
+
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Aqui el blog post</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi tenetur cupiditate quis dolore. Facilis, temporibus deserunt vero atque dolores sit aspernatur rerum praesentium inventore officiis animi eveniet at accusamus repellat!</p>
