Finalizada cabecera con diseño gris

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
     <div class="container">
 
         <div id="cabecera">
-            Cabecera
+            Blog de ejemplo <span id="tagline">aqui el tagline</span>
         </div>
         <div id="post">
             <h1>Aqui el blog post</h1>
