maquetado el header

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,9 @@
     <div class="container">
 
         <div id="cabecera">
-            Blog de ejemplo <span id="tagline">aqui el tagline</span>
+            <img src="https://placehold.it/50" alt="">
+            <h3>Blog de ejemplo <span id="tagline">aqui el tagline</span></h3>
+           
         </div>
         <div id="post">
             <h1>Aqui el blog post</h1>
