--- a/blogpost.html
+++ b/blogpost.html
@@ -17,11 +17,11 @@
            
         </div>
         <div id="post">
-            <h1>Aqui el blog post</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi tenetur cupiditate quis dolore. Facilis, temporibus deserunt vero atque dolores sit aspernatur rerum praesentium inventore officiis animi eveniet at accusamus repellat!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi tenetur cupiditate quis dolore. Facilis, temporibus deserunt vero atque dolores sit aspernatur rerum praesentium inventore officiis animi eveniet at accusamus repellat!</p>
+            <h1>Soy el jefe y hago push en main</h1>
+            
+            <p>Quito un párrafo que no me gustaba y no aviso al equipo</p>
 
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, nisi molestias obcaecati quam tempora voluptatibus ea consectetur iure blanditiis eveniet beatae officia earum esse quo iusto id cupiditate porro qui.</p>
+            <p>También cambio estilos sin avisar y pongo rojos</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, nisi molestias obcaecati quam tempora voluptatibus ea consectetur iure blanditiis eveniet beatae officia earum esse quo iusto id cupiditate porro qui.</p>
         </div>
     </div> 
