--- a/blogpost.html
+++ b/blogpost.html
@@ -20,7 +20,7 @@
             <h1>Aqui el blog post</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi tenetur cupiditate quis dolore. Facilis, temporibus deserunt vero atque dolores sit aspernatur rerum praesentium inventore officiis animi eveniet at accusamus repellat!</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi tenetur cupiditate quis dolore. Facilis, temporibus deserunt vero atque dolores sit aspernatur rerum praesentium inventore officiis animi eveniet at accusamus repellat!</p>
-
+            <img src="https://placehold.it/150" alt="">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, nisi molestias obcaecati quam tempora voluptatibus ea consectetur iure blanditiis eveniet beatae officia earum esse quo iusto id cupiditate porro qui.</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, nisi molestias obcaecati quam tempora voluptatibus ea consectetur iure blanditiis eveniet beatae officia earum esse quo iusto id cupiditate porro qui.</p>
         </div>
