Nueva maquetación yc ontenidos

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,7 @@
         </div>
         <div id="post">
             <h1>Soy el jefe y hago push en main</h1>
-            
+            <img src="https://placehold.it/150" alt="">            
             <p>Quito un párrafo que no me gustaba y no aviso al equipo</p>
 
             <p>También cambio estilos sin avisar y pongo rojos</p>
