CAmbios para testar

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
 
         <div id="cabecera">
             <img src="https://placehold.it/50" alt="">
-            <h3>Blog de ejemplo <span id="tagline">aqui el tagline</span></h3>
+            <h3>Blog Profeisonal con SSH <span id="tagline">aqui el tagline</span></h3>
            
         </div>
         <div id="post">
