--- a/blogpost.html
+++ b/blogpost.html
@@ -11,11 +11,11 @@
 
     <div class="container">
 
-        <div id="cabecera">
-            <img src="https://placehold.it/50" alt="">
+        <header id="cabecera">
+            <img src="img/logo.jpg" alt="">
             <h3>Blog Profeisonal con SSH <span id="tagline">aqui el tagline</span></h3>
            
-        </div>
+        </header>
         <div id="post">
             <h1>Soy el jefe y hago push en main</h1>
             <img src="https://placehold.it/150" alt="">            
