--- a/blogpost.html
+++ b/blogpost.html
@@ -24,7 +24,14 @@
             <p>También cambio estilos sin avisar y pongo rojos</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, nisi molestias obcaecati quam tempora voluptatibus ea consectetur iure blanditiis eveniet beatae officia earum esse quo iusto id cupiditate porro qui.</p>
         </div>
+
+        
+        <footer>
+            <p>Copyright 2023 <3</p>
+        </footer>
     </div> 
+
+
   
 </body>
 </html>
