--- a/blogpost.html
+++ b/blogpost.html
@@ -13,13 +13,13 @@
 
         <header id="cabecera">
             <img src="img/logo.jpg" alt="">
-            <h3>Blog Profeisonal con SSH <span id="tagline">aqui el tagline</span></h3>
+            <h3>Blog Profesional con SSH <span id="tagline">aquí el tagline</span></h3>
            
         </header>
         <div id="post">
-            <h1>Soy el jefe y hago push en main</h1>
+            <h1>Soy el jefe y hago push en main.</h1>
             <img src="https://placehold.it/150" alt="">            
-            <p>Quito un párrafo que no me gustaba y no aviso al equipo</p>
+            <p>Quito un párrafo que no me gustaba y no aviso al equipo.</p>
 
             <p>También cambio estilos sin avisar y pongo rojos</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, nisi molestias obcaecati quam tempora voluptatibus ea consectetur iure blanditiis eveniet beatae officia earum esse quo iusto id cupiditate porro qui.</p>
