Añadida imagen de equipo

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,7 +20,7 @@
             <h1>Soy el jefe y hago push en main.</h1>
             <img src="https://placehold.it/150" alt="">            
             <p>Quito un párrafo que no me gustaba y no aviso al equipo.</p>
-
+            <p><img src="img/equipo.jpg" alt=""></p>
             <p>También cambio estilos sin avisar y pongo rojos</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, nisi molestias obcaecati quam tempora voluptatibus ea consectetur iure blanditiis eveniet beatae officia earum esse quo iusto id cupiditate porro qui.</p>
         </div>
